fix site-content missing right padding on mobile

--- a/static/theme.css
+++ b/static/theme.css
@@ -514,7 +514,7 @@ input.page-nav-add-input.active {
 }
 
 .site-content {
-  padding: 0 0 0 var(--space-5);
+  padding-inline: var(--space-5);
 }
 
 .site-layout > * {
